--- a/css/style.css
+++ b/css/style.css
@@ -677,7 +677,7 @@ app marcup
         overflow: hidden;
         width: 100vw;
         height: calc(100vh - 30px);
-        padding-right: 80px;
+        /* padding-right: 80px; */
         -webkit-transition: 0.55s ease-in-out;
         transition: 0.55s ease-in-out; }
         /* line 177, ../scss/_markup.scss */
