--- a/css/style.css
+++ b/css/style.css
@@ -1958,7 +1958,7 @@ content
         margin-bottom: 15px; }
         /* line 447, ../scss/_content.scss */
         .art-timeline .art-timeline-content .art-card-header .art-right-side .art-date {
-          color: #646466;
+          color: #d4d4d4;
           margin-left: auto;
           background: #20202a;
           padding: 5px 15px;
