--- a/css/style.css
+++ b/css/style.css
@@ -522,7 +522,7 @@ app marcup
   position: absolute;
   top: 0;
   left: 0;
-  width: calc(100vw - 30px);
+  width: 98%;
   height: calc(100vh - 30px);
   background: #20202a;
   z-index: 999999;
